# jsonschema

./: Cargo.toml  README.md  default.nix
.github/workflows/: rust.yml
src/: args.rs  cache.rs  command.rs  error.rs  http.rs  main.rs  parse.rs  schemastore.rs  utils.rs  validate.rs
src/cache/: base.rs  file.rs  sled.rs  stub.rs
src/command/: check.rs  infer.rs  retrieve.rs  search.rs  validate.rs
src/parse/: bson.rs  cbor.rs  json.rs  json5.rs  pickle.rs  ron.rs  toml.rs  yaml.rs
src/schemastore/: data.rs
src/validate/: jsonschema.rs  jsonschema_valid.rs  valico.rs
