[package]
name = "jsonst"
description = "JSON Schema hacking toolset"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/katyo/jsonschema"
repository = "https://github.com/katyo/jsonschema"
license = "Apache-2.0"
keywords = ["jsonschema", "json", "inferring", "validation", "commandline"]
categories = ["command-line-utilities"]

[badges.maintenance]
status = "experimental"

[dependencies]
dirs = "3"
paw = "1"
log = "0.4"
pretty_env_logger = "0.4"
url = "2"

[dependencies.jsonschema]
version = "0.3"
optional = true

[dependencies.jsonschema-valid]
version = "0.4"
optional = true

[dependencies.valico]
version = "3"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_with]
version = "1"
optional = true

[dependencies.base64]
version = "0.12"
optional = true

[dependencies.crypto-hashes]
version = "0.9"
optional = true

[dependencies.hmac-sha256]
version = "0.1"
optional = true

[dependencies.regex]
version = "1"
optional = true

[dependencies.infers]
package = "infers-jsonschema"
version = "0.1"
optional = true

[dependencies.json]
package = "serde_json"
version = "1"

[dependencies.json5]
version = "0.2"
optional = true

[dependencies.yaml]
package = "serde_yaml"
version = "0.8"
optional = true

[dependencies.toml]
version = "0.5"
optional = true

[dependencies.ron]
version = "0.6"
optional = true

[dependencies.bson]
version = "1"
optional = true

[dependencies.cbor]
package = "serde_cbor"
version = "0.11"
optional = true

[dependencies.pickle]
package = "serde-pickle"
version = "0.6"
optional = true

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.sled]
version = "0.34"
optional = true

[dependencies.http_req]
version = "0.7"
optional = true

[features]
default = ["full"]

full = [
  "schemastore",
  "cache",
  "infers",
  "all-validators",
  "all-parsers",
]

minimal = [
  "valico",
]

schemastore = [
  "http_req",
  "serde_with",
  "regex",
]

cache = [
  "serde",
  "base64",
  #"crypto-hashes",
  "hmac-sha256",
]

all-validators = [
  "jsonschema",
  "jsonschema-valid",
  "valico",
]

txt-parsers = [
  "json5",
  "yaml",
  "toml",
  "ron",
]

bin-parsers = [
  "bson",
  "cbor",
  "pickle",
]

all-parsers = [
  "txt-parsers",
  "bin-parsers",
]

rustls = ["http_req/rustls"]

[profile.release]
opt-level = "s"
#lto = "thin"
lto = "fat"
panic = "abort"
codegen-units = 1
